--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern-infrastructure",
+  "name": "coffee-and-chemistry",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
